--- a/default/app.conf
+++ b/default/app.conf
@@ -11,6 +11,6 @@ label = Smarthome forensics
 
 [launcher]
 author = m4ttb1ss
-description = 
-version = 0.0.1
+description = This app can be used to ingest arbitratry Smarthome log data. The app provides a Datamodel named "Smarthome" which should be used to map all log sources to this datamodel. If done, the data can be viewed and analyzed in various dashboards.
+version = 1.0.0
 
