Adopted investigation dashboard, added openhab sourcetypes log and event

--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -21,6 +21,6 @@ search = `smarthome_indexes`\
     | dedup source\
     | fields source]\
 | eval investigation_case_id=if(isnull(investigation_case_id) OR (investigation_case_id==""),"-",investigation_case_id)\
-| eval artifact_id=if(isnull(artifact_id) OR (artifact_id==""),"-",artifact_id)
+| eval artifact_id=if(isnull(artifact_id) OR (artifact_id==""),"-",artifact_id)\
 | eval file_hash=if(isnull(file_hash) OR (file_hash==""),"-",file_hash)\
 | outputlookup append=true override_if_empty=false investigation_ids
