--- a/default/props.conf
+++ b/default/props.conf
@@ -7,3 +7,22 @@ category = Custom
 pulldown_type = true
 EXTRACT-time,log_level,module,message = ^(?P<time>\d+\-\d+\-\d+\s+\d+:\d+:\d+)\s+(?P<log_level>\w+)\s+(?P<module>[^ ]+)\s+(?P<message>.*)
 EVAL-log_source_tool = "-"
+
+[openhab:events]
+DATETIME_CONFIG = 
+LINE_BREAKER = ([\r\n]+)
+NO_BINARY_CHECK = true
+category = Custom
+description = OpenHAB eventlog
+pulldown_type = true
+EXTRACT-module,message = ^[^\[\n]*\[(?P<module>[^\]]+)\]\s+\-\s+(?P<message>.+)
+
+[openhab:log]
+DATETIME_CONFIG = 
+LINE_BREAKER = ([\r\n]+)
+NO_BINARY_CHECK = true
+category = Custom
+description = Logs from openhab.log
+disabled = false
+pulldown_type = true
+EXTRACT-log_level,module,message = ^[^\[\n]*\[(?P<log_level>[^\]]+)\s*\]\s+\[(?P<module>[^\]]+)\]\s+\-\s+(?P<message>.+)
