Chánged time representation to include Timezone, added description to dashboards, added filter to Investigation dashboard, changed nav, slight changes in fiters

--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -3,3 +3,8 @@
 batch_index_query = 0
 case_sensitive_match = 1
 filename = app_dependencies.csv
+
+[investigation_ids]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = investigation_ids.csv
