--- a/default/indexes.conf
+++ b/default/indexes.conf
@@ -3,6 +3,7 @@ homePath   = $SPLUNK_DB\smarthome\db
 coldPath   = $SPLUNK_DB\smarthome\colddb
 thawedPath = $SPLUNK_DB\smarthome\thaweddb
 maxTotalDataSizeMB = 5000
+enableDataIntegrityControl = true
 
 [investigations]
 homePath   = $SPLUNK_DB\investigations\db
