--- a/default/props.conf
+++ b/default/props.conf
@@ -26,3 +26,22 @@ description = Logs from openhab.log
 disabled = false
 pulldown_type = true
 EXTRACT-log_level,module,message = ^[^\[\n]*\[(?P<log_level>[^\]]+)\s*\]\s+\[(?P<module>[^\]]+)\]\s+\-\s+(?P<message>.+)
+
+
+[homematic:ccu2:systemprotokoll]
+DATETIME_CONFIG = 
+INDEXED_EXTRACTIONS = csv
+KV_MODE = none
+LINE_BREAKER = ([\r\n]+)
+NO_BINARY_CHECK = true
+SHOULD_LINEMERGE = false
+category = Structured
+description = Log file from Homematic Systemprotokoll
+disabled = false
+pulldown_type = true
+EVAL-value = VALUE + " " + UNIT
+FIELDALIAS-homematic_2_smarthome = CHANNEL ASNEW source_entitiy_name CHANNEL_ID ASNEW source_entity_address VALUE_ID ASNEW property
+EVAL-message = VALUE_ID.": ".VALUE." ".UNIT
+BREAK_ONLY_BEFORE_DATE = 
+
+
