--- a/default/authorize.conf
+++ b/default/authorize.conf
@@ -4,5 +4,6 @@ cumulativeRTSrchJobsQuota = 0
 cumulativeSrchJobsQuota = 0
 importRoles = user
 srchDiskQuota = 250
-srchIndexesAllowed = _audit
 srchMaxTime = 8640000
+srchIndexesAllowed = _audit;investigations;smarthome
+srchIndexesDefault = investigations;smarthome
