deleted some local files

--- a/default/props.conf
+++ b/default/props.conf
@@ -6,7 +6,7 @@ NO_BINARY_CHECK = true
 category = Custom
 pulldown_type = true
 EXTRACT-time,log_level,module,message = ^(?P<time>\d+\-\d+\-\d+\s+\d+:\d+:\d+)\s+(?P<log_level>\w+)\s+(?P<module>[^ ]+)\s+(?P<message>.*)
-EVAL-log_source_tool = "-"
+EVAL-log_source_tool = "SmarthomeNG"
 
 [openhab:events]
 DATETIME_CONFIG = 
@@ -43,5 +43,20 @@ EVAL-value = VALUE + " " + UNIT
 FIELDALIAS-homematic_2_smarthome = CHANNEL ASNEW source_entitiy_name CHANNEL_ID ASNEW source_entity_address VALUE_ID ASNEW property
 EVAL-message = VALUE_ID.": ".VALUE." ".UNIT
 BREAK_ONLY_BEFORE_DATE = 
+
+[ets5:bus:monitor]
+EVAL-message = type + " " + info + " " + destination_address
+EVAL-vendor_product = "ETS5"
+FIELDALIAS-aob_gen_ets5_bus_monitor_alias_1 = prio AS log_level
+REPORT-ta_builder_internal_use_table_format_results_for_ets5_bus_monitor = ta_builder_internal_use_table_format_results_for_ets5_bus_monitor
+SHOULD_LINEMERGE = 0
+category = Structured
+description = This sourcetype is used for saved group monitor recordings of the ETS5. Depending if a project was selected when monitoring the bus, the source and destination names are logged or not. 
+TZ = Europe/Berlin
+pulldown_type = 1
+DATETIME_CONFIG = 
+LINE_BREAKER = ([\r\n]+)
+NO_BINARY_CHECK = true
+disabled = false
 
 
