--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -8,3 +8,7 @@ filename = app_dependencies.csv
 batch_index_query = 0
 case_sensitive_match = 1
 filename = investigation_ids.csv
+
+[ta_builder_internal_use_table_format_results_for_ets5_bus_monitor]
+DELIMS = ","
+FIELDS = ets_id,time,service,flags,prio,source_address,source_name,destination_address,destination_name,route,type,datapoint,info,lack
