Final version to be submitted

--- a/default/props.conf
+++ b/default/props.conf
@@ -46,8 +46,9 @@ BREAK_ONLY_BEFORE_DATE =
 
 [ets5:bus:monitor]
 EVAL-message = type + " " + info + " " + destination_address
-EVAL-vendor_product = "ETS5"
+EVAL-log_source_tool = "ETS5"
 FIELDALIAS-aob_gen_ets5_bus_monitor_alias_1 = prio AS log_level
+FIELDALIAS-ets5_datamodel_smarthome = destination_address ASNEW destination_entity_address destination_name ASNEW destination_entity_name source_address ASNEW source_entity_address source_name ASNEW source_entity_name
 REPORT-ta_builder_internal_use_table_format_results_for_ets5_bus_monitor = ta_builder_internal_use_table_format_results_for_ets5_bus_monitor
 SHOULD_LINEMERGE = 0
 category = Structured
@@ -58,5 +59,20 @@ DATETIME_CONFIG =
 LINE_BREAKER = ([\r\n]+)
 NO_BINARY_CHECK = true
 disabled = false
+TRANSFORMS-t1=eliminate_header
+
+[amazon:alexa:deviceStateHistory]
+DATETIME_CONFIG = 
+INDEXED_EXTRACTIONS = csv
+KV_MODE = none
+LINE_BREAKER = ([\r\n]+)
+NO_BINARY_CHECK = true
+SHOULD_LINEMERGE = false
+category = Structured
+description = Alexa device state history which can be requested at Amazon (https://www.amazon.de/alexa-privacy/apd/myad)
+disabled = false
+pulldown_type = true
+EVAL-message = 'Device Name'.": ".Property.": ".Value
+FIELDALIAS-alexa_devices_to_smarthome = "Device Name" ASNEW source_entity_name "Device Type" ASNEW source_entity_type Property ASNEW property Value ASNEW value
 
 
