--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -12,3 +12,8 @@ filename = investigation_ids.csv
 [ta_builder_internal_use_table_format_results_for_ets5_bus_monitor]
 DELIMS = ","
 FIELDS = ets_id,time,service,flags,prio,source_address,source_name,destination_address,destination_name,route,type,datapoint,info,lack
+
+[eliminate_header]
+REGEX=^(?:\#)\s
+DEST_KEY=queue
+FORMAT=nullQueue
