--- a/default/eventtypes.conf
+++ b/default/eventtypes.conf
@@ -1,3 +1,3 @@
 ﻿
 [smarthome]
-search = sourcetype IN ("smarthomeng:log","openhab:*","homematic:ccu2:systemprotokoll")
+search = sourcetype IN ("smarthomeng:log","openhab:*","homematic:ccu2:systemprotokoll","ets5:bus:monitor","amazon:alexa:deviceStateHistory")
